[package]
name = "cargo-dfu"
authors = ["Roman Kretschmer <roman@kretschmer.email>"]
version = "0.0.4"
edition = "2021"
description = "cargo extension for flashing embedded rust programs via dfu"
license = "MIT"
homepage = "https://github.com/gnxlxnxx/cargo-dfu"
repository = "https://github.com/gnxlxnxx/cargo-dfu.git"
categories = ["embedded", "hardware-support"]
keywords = ["dfu", "flashing", "embedded"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.2.3"
colored = "2.0.0"
rusb = "0.9.0"
pretty_env_logger = "0.3.0"
cargo-project = "0.2.4"
structopt = "0.3.2"
maplit = "1.0.2"
log = "0.4.6"

[dependencies.dfu-libusb]
git = "https://github.com/dfu-rs/dfu-libusb.git"
rev = "84d05c366671bc2608c8d2b68fe79a67a327d3a3"
